--- a/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/dashboard.mdx
@@ -82,7 +82,7 @@ For more information, click any entry in the deployment table.
 
 ![deployment-details](https://vtexhelp.vtexassets.com/assets/docs/src/deployment-details___011bb7391157ad21eb965d8bcfc75b03.gif)
 
-In the **Deploy steps** section, select a step (example: **Build - Discovery**) to view logs. The logs show on the right and help diagnose failed deployments.
+In the **Deploy Steps** section, select a step (example: **Build - Discovery**) to view logs. The logs show on the right and help diagnose failed deployments.
 
 ## Integrations
 
