--- a/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
@@ -2,7 +2,7 @@
 title: '1. Configuring external DNS'
 ---
 
-In this guide, you will learn how to configure external domains for your **FastStore** and **VTEX** website. The process involves the following steps:
+In this guide, learn how to configure external domains for your **FastStore** and **VTEX** website. The process involves the following steps:
 
    - Setting up your external DNS provider to point your custom domain to your VTEX website. You can buy custom domains from any **domain registration platform**.
    - Configuring your custom domains in **VTEX Account Settings**.
@@ -35,8 +35,6 @@ To proceed, make sure your store is active and in production by following the st
 
 ### Step 3 - Configuring domains in VTEX Account Settings
 
-> ⚠️ For stores hosted on [Vercel](https://vercel.com/), see the [Single-domain setup for stores hosted on Vercel](#step-5--single--domain-setup-only-for-stores-hosted-on-vercel) section.
-
 Now, you must set up your VTEX account to use the DNS records created in the previous step.
 
 > ℹ For more information about store domain configuration, see the [Configuring the store domain](https://help.vtex.com/en/tutorial/configuring-the-store-domain--tutorials_2450) guide.
@@ -51,17 +49,27 @@ Now, you must set up your VTEX account to use the DNS records created in the pre
    ![host-configuration](https://vtexhelp.vtexassets.com/assets/docs/src/account-settings-new___2e13bee3041e8505922a737b94652ca6.png)
 
 7. Add the root domain as well; for example, if your domain is `www.mystore.com`, add `mystore.com`. For a complete setup, you must add three hosts for each domain:
-   - `www.mystore.com`  (store domain)
+   - `www.mystore.com` (store domain)
    - `mystore.com` (root domain)
    - `secure.mystore.com` (checkout/myaccount subdomain)
 
 > ⚠️ To ensure a seamless checkout experience, all subdomains used by your store must be added to the host list. For more information, see the [Adding subdomains to the host list](#adding-subdomains-to-the-host-list) section.
 
+#### Stores hosted on Vercel
+
+Stores hosted on [Vercel](https://vercel.com/) can benefit from a single domain. This feature simplifies domain management by routing Checkout and My Account pages through the store’s primary domain (e.g., `www.domain.com`), removing the need for a separate `secure.domain.com` subdomain.
+
+Add the hosts for the domain as shown in the example below:
+
+   - `www.mystore.com` (store domain)
+   - `mystore.com` (root domain)   
+</details>
+
 8. Click the **Save** button.
 
 ### Step 4 - Associating your custom domain with your FastStore project
 
-> ⚠️ For stores hosted on [Vercel](https://vercel.com/), see the [Single-domain setup for stores hosted on Vercel](#step-5--single--domain-setup-only-for-stores-hosted-on-vercel) section.
+> ⚠️ Stores hosted on [Vercel](https://vercel.com/), see the [Single-domain setup for stores hosted on Vercel](#step-5--single--domain-setup-only-for-stores-hosted-on-vercel) section.
 
 Back to your FastStore project, you must also configure your project to point to the right addresses and domains.
 
@@ -110,7 +118,7 @@ Take the following example of how this code block would look after configuring a
 
 ### Step 5 - Single-domain setup (Only for stores hosted on Vercel)
 
-FastStore stores hosted on [Vercel](https://vercel.com/) can benefit from a single domain. This feature simplifies domain management by routing Checkout and My Account pages through the store’s primary domain (e.g., `www.domain.com`), removing the need for a separate `secure.domain.com` subdomain. To use this feature, follow these instructions:
+Stores hosted on [Vercel](https://vercel.com/) can benefit from a single domain. This feature simplifies domain management by routing Checkout and My Account pages through the store’s primary domain (e.g., `www.domain.com`), removing the need for a separate `secure.domain.com` subdomain. To use this feature, follow these instructions:
 
 #### Check the store configuration file and store version
 
@@ -122,22 +130,6 @@ FastStore stores hosted on [Vercel](https://vercel.com/) can benefit from a sing
    ```bash
    yarn upgrade -L --scope @faststore
    ```
-
-#### Setup domains in VTEX Account Settings
-
-> ℹ For more information about store domain configuration, see the [Configuring the store domain](https://help.vtex.com/en/tutorial/configuring-the-store-domain--tutorials_2450) guide.
-
-1. In the VTEX Admin, click your profile avatar, which can be identified by the first letter of your email address.
-2. Access **Account Settings > Account**.
-3. Go to the **Stores** tab and in the **Hosts** table, click the menu (**⋮**) and choose **Edit**.
-4. In the **Hosts** field, enter your main domain (example: `www.mystore.com`) into the list.
-5. Click `Add`.
-6. Add the subdomain root domain as well; for example, if your domain is `www.mystore.com`, add `mystore.com`. For a complete setup, you must add three hosts for each domain:
-   - `www.mystore.com`  (store domain)
-   - `mystore.com` (root domain)
-   - `domain.com/checkout` (checkout/myaccount subdomain)
-
-> ⚠️ To ensure a seamless checkout experience, all subdomains used by your store must be added to the host list. For more information, see the [Adding subdomains to the host list](#adding-subdomains-to-the-host-list) section.
 
 #### Open a ticket to VTEX Support
 
@@ -169,7 +161,7 @@ To enable the single-domain feature, request the account configuration from VTEX
 
 3. Save your changes.
 4. Open the `vtex.env` file.
-5. Add the `SITE_HOST` key with the main domain specified in [Setup domains in VTEX Account Settings](#setup-domains-in-vtex-account-settings) as the value.
+5. Add the `SITE_HOST` key with the main domain specified in [Stores hosted on Vercel](#stores-hosted-on-vercel) as the value.
 
 ### Step 6 - Configuring the CDN workflow (Only for new go-lives)
 
