--- a/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
@@ -63,6 +63,7 @@ Add the hosts for the domain as shown in the example below:
    - `www.mystore.com` (store domain)
    - `mystore.com` (root domain)   
 
+For more information about the single domain feature, see the [Step 5 - Single-domain setup (Only for stores hosted on Vercel)](#step-5---single-domain-setup-only-for-stores-hosted-on-vercel).
 </details>
 
 8. Click the **Save** button.
@@ -71,7 +72,7 @@ Add the hosts for the domain as shown in the example below:
 
 ### Step 4 - Associating your custom domain with your FastStore project
 
-> ⚠️ Stores hosted on [Vercel](https://vercel.com/), see the [Single-domain setup for stores hosted on Vercel](#step-5--single--domain-setup-only-for-stores-hosted-on-vercel) section.
+> ⚠️ Stores hosted on [Vercel](https://vercel.com/), see the [Step 5 - Single-domain setup (Only for stores hosted on Vercel)](#step-5---single-domain-setup-only-for-stores-hosted-on-vercel).
 
 Back to your FastStore project, you must also configure your project to point to the right addresses and domains.
 
@@ -163,7 +164,7 @@ To enable the single-domain feature, request the account configuration from VTEX
 
 3. Save your changes.
 4. Open the `vtex.env` file.
-5. Add the `SITE_HOST` key with the main domain specified in [Stores hosted on Vercel](#stores-hosted-on-vercel) as the value.
+5. Add the `SITE_HOST` key with the main domain as the value specified in [Stores hosted on Vercel in Step 3 - Configuring domains in VTEX Account Settings](https://developers.vtex.com/docs/guides/faststore/go-live-1-configuring-external-dns#step-3-configuring-domains-in-vtex-account-settings).
 
 ### Step 6 - Configuring the CDN workflow (Only for new go-lives)
 
