--- a/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
@@ -56,7 +56,7 @@ Now, you must set up your VTEX account to use the DNS records created in the pre
 <details>
 <summary><b>Stores hosted on Vercel</b></summary>
 
-Stores hosted on [Vercel](https://vercel.com/) can benefit from a single domain. This feature simplifies domain management by routing Checkout and My Account pages through the store’s primary domain (e.g., `www.domain.com`), removing the need for a separate `secure.domain.com` subdomain.
+Stores hosted on [Vercel](https://vercel.com/) can use a single domain for all pages, including Checkout and My Account. This eliminates the need for a separate `secure.domain.com` subdomain (e.g., everything routes through `www.domain.com`).
 
 Add the hosts for the domain as shown in the example below:
 
