--- a/docs/localization/graphql-authorization-in-io-apps.mdx
+++ b/docs/localization/graphql-authorization-in-io-apps.mdx
@@ -27,7 +27,7 @@ The `@auth` directive uses the following arguments:
 - `productCode`: The numeric code that identifies the product in License Manager (for example, `"66"` for **VTEX IO**).
 - `resourceCode`: The License Manager resource identifier (for example, `"workspace-read-write"` for **Workspace CRUD**).
 
-Example
+Example:
 
 ```graphql graphql/schema.graphql mark=2
 createWorkspace(account: String, workspace: String): GenericResponse
