fix: css module class name for CustomBuyButton component

--- a/docs/faststore/docs/customization/using-themes/components.mdx
+++ b/docs/faststore/docs/customization/using-themes/components.mdx
@@ -104,7 +104,7 @@ To follow along this section, make sure to create the `CustomBuyButton`.
 2. Add the following code to the `CustomBuyButtons.module.scss` file:
 
 ```scss CustomBuyButton.module.scss
-.CustomBuyButton {
+.customBuyButton {
   --fs-button-border-radius: var(--fs-border-radius-pill);
   --fs-button-padding:  0 var(--fs-spacing-5);
 
