--- a/docs/faststore/components/molecules/overview.mdx
+++ b/docs/faststore/components/molecules/overview.mdx
@@ -168,6 +168,13 @@ hideTOC: true
     />
   </CardItem>
   <CardItem
+    title="Popover"
+    description="Provides contextual information relative to a trigger element when a user interacts with it to open the container."
+    actionPath="/docs/guides/faststore/molecules-popover"
+  <
+    <PopoverUsage />
+  </CardItem>
+  <CardItem
     title="ProductCard"
     description="Displays summarized information about a product."
     actionPath="/docs/guides/faststore/molecules-product-card"
