update(components/index.mdx): adding popover card

--- a/docs/faststore/components/index.mdx
+++ b/docs/faststore/components/index.mdx
@@ -316,6 +316,13 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
     />
   </CardItem>
   <CardItem
+    title="Popover"
+    description="Provides contextual information relative to a trigger element when a user interacts with it to open the container."
+    actionPath="/docs/guides/faststore/molecules-popover"
+  >
+    <PopoverUsage />
+  </CardItem>
+  <CardItem
     title="ProductCard"
     description="Displays summarized information about a product."
     actionPath="/docs/guides/faststore/molecules-product-card"
