--- a/docs/faststore/components/index.mdx
+++ b/docs/faststore/components/index.mdx
@@ -320,7 +320,9 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
     description="Provides contextual information relative to a trigger element when a user interacts with it to open the container."
     actionPath="/docs/guides/faststore/molecules-popover"
   >
-    <PopoverUsage />
+    <UIProvider>
+      <PopoverUsage />
+    </UIProvider>
   </CardItem>
   <CardItem
     title="ProductCard"
