--- a/docs/faststore/components/molecules/overview.mdx
+++ b/docs/faststore/components/molecules/overview.mdx
@@ -166,6 +166,7 @@ hideTOC: true
       discountValue={`-${useFormattedPrice(100)}`}
       totalValue={useFormattedPrice(1100)}
     />
+  </CardItem>
   <CardItem
     title="Popover"
     description="Provides contextual information relative to a trigger element when a user interacts with it to open the container."
