project structure doc: review intro according to the review bot

--- a/docs/faststore/docs/getting-started/faststore-project-structure.mdx
+++ b/docs/faststore/docs/getting-started/faststore-project-structure.mdx
@@ -6,7 +6,7 @@ In the previous guide of this track, you started your first FastStore project, l
 
 Understanding the structure of a FastStore project can help you navigate the codebase and customize it to fit your specific needs.
 
-Let's start taking a look at the structure that represents the source code of a FastStore project:
+Here's the structure that represents the source code of a FastStore project:
 
 ```
 /
