Apply suggestions from code review
Co-authored-by: Mariana Caetano Pereira <67270558+mariana-caetano@users.noreply.github.com>

--- a/docs/faststore/components/index.mdx
+++ b/docs/faststore/components/index.mdx
@@ -317,7 +317,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Popover"
-    description="Provides contextual information relative to a trigger element when a user interacts with it to open the container."
+    description="Provides contextual information related to a trigger element when a user interacts with it to open the container."
     actionPath="/docs/guides/faststore/molecules-popover"
   >
     <UIProvider>
